application/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: nginx
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
